Lag kobling mellom regelsett og avklaring
Endrer også listene av vilkår og fastsettelser til å peke til hvilke opplysninger som skal med.
